Add support for unblocking read/write when close called. Fixes PR/26567 for pipes. (NB ad backed out the fix for sockets)